Review to use lazy initialization for checksums and reading profiles.